    Updated the "eclipse6iso.pl" config file with partial parsing solutions
    for some proprietary ECLiPSe directives.

    Updated the ECLiPSe config file with more robust code for parsing
    use_module/1 directives, capable of processing both ECLiPSe module/1
    directives and the module/2 directives used by other Prolog compilers.

    Updated the Qu-Prolog integration script, "qplgt.sh", in order to use
    larger memory values for the code and environment areas.

    Replaced the predicate as_dictionary/2 in the library object "bintree"
    with a new implementation, contributed by Paul Fodor, that returns a
    semi-balanced tree.

    Added a predicate and an operator definition, =~=/2, for comparing floats
    for approximate equality to the library object "lgtunit". Updated the unit
    tests of several examples in order to use this predicate.

    Updated the "examples/tester.sh" script in order to report an error when
    the default Prolog back-end compiler is not found. Thanks to Parker Jones
    for the bug report. Updated the script to also report errors that are not
    written to standard error and to print a note when a unit test is not
    applicable.

    Updated the "encodings" example unit test loader file to correctly detect
    back-end Prolog compilers supporting the encoding/1 directive. Added new
    test files for each supported text encoding.

    Added some more unit tests for the "reflection" example.

    Fixed a typo that prevented running the "mtbatch" example using XSB as the
    back-end Prolog compiler. 

    Simplified the "cc" example when using SICStus Prolog 4.x as the back-end
    compiler by moving importing of the "system3" library shell/1-2 predicates
    to the config file.

    Added unit tests for the "constraints", "hooks", "miscellaneous", and
    "people" examples.

    Corrected a bug in the "lambdas" example (a missing meta_predicate/1
    directive in the object "sigma").
